# llama-net

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start-app.sh  test_hf_parsing.py  test_llamanet.py
client/: __init__.py  api.py  dht_discovery.py  discovery.py  event_aware_client.py  event_discovery.py  router.py
common/: __init__.py  dht_service.py  error_handler.py  event_manager.py  hardware_fingerprint.py  health_monitor.py  metrics_manager.py  model_detector.py  models.py  network_discovery.py  network_utils.py  openai_models.py  p2p_transport.py  port_utils.py  service_manager.py  shutdown_handler.py  sse_handler.py  subnet_matcher.py  unified_sse.py  utils.py  validation_utils.py
dht/: __init__.py  kademlia_node.py  protocol.py  routing_table.py
docker/: README.md  docker-compose.yml  gpu-detect.sh  inference.Dockerfile  registry.Dockerfile  start.sh
examples/: openai_client_example.py  simple_client.py
inference_node/: __init__.py  config.py  dht_publisher.py  event_publisher.py  heartbeat.py  hf_downloader.py  llm_wrapper.py  metrics.py  model_manager.py  p2p_handler.py  request_queue.py  sd_config.py  sd_wrapper.py  server.py
plans/archive/: distributed_llm_system_interrupted_20250921_013500.md  missing_files_creation_superseded_20250921_001912.md  openai_streaming_compatibility_interrupted_20250921_014254.md  stream_ui_class_interrupted_20250921_020115.md  stream_ui_update_interrupted_20250921_014634.md  stream_ui_update_interrupted_20250921_015059.md  stream_ui_update_interrupted_20250921_015334.md
registry/: config.py  node_manager.py  server.py
scripts/: install-cuda-support.sh
static/: app.js  index.html  stream-ui.js  style.css
tools/: monitor.py  network_diagnostics.py  network_status.py  quick_check.py
