[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamanet"
version = "0.1.0"
description = "Decentralized Inference Swarm for llama.cpp"
authors = [{name = "LlamaNet Team", email = "example@example.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["llm", "inference", "decentralized"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "fastapi>=0.68.0,<1.0.0",
    "uvicorn>=0.15.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.26.0,<3.0.0",
    "llama-cpp-python>=0.2.20",
    "psutil>=5.8.0,<6.0.0",
    "pynvml>=11.4.1",
    "kademlia>=2.2.2,<3.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "p2pd",
    "ipaddress>=1.0.23",
]

[project.urls]
Homepage = "https://github.com/yourusername/llamanet"
Repository = "https://github.com/yourusername/llamanet"

[project.scripts]
llamanet-inference = "inference_node.server:start_server"
llamanet-registry = "registry.server:start_server"
llamanet-help = "inference_node.server:show_help"

[tool.setuptools.packages.find]
include = ["client*", "common*", "dht*", "inference_node*", "registry*"]
